youker-assistant (3.0.2-0kylin6k62~rc1) v101; urgency=medium

  [yangmin]
   * Bug  :
     - bug# 56011 【亮剑行动】【工具箱】未获取到显示器信息以及显卡型号
   * Task :
   * Other:

 -- hebing <hebing@kylinos.cn>  Thu, 10 Jun 2021 19:27:22 +0800

youker-assistant (3.0.2-0kylin6k61~rc1) v101; urgency=medium

  [guang tang]
   * Bug  :
     - bug#55816/bug#55481:扫描界面的统计精度和清理完成页面的统计精度不一致
   * Task :
   * Other:

 -- hebing <hebing@kylinos.cn>  Wed, 09 Jun 2021 11:54:30 +0800

youker-assistant (3.0.2-0kylin6k60~rc1) v101; urgency=medium

  [guang tang]
   * Bug  :
     - bug#53417 工具箱的手册中还有麒麟助手的字眼
     - bug#52808 查看麒麟助手在开始菜单、软件商店、用户手册中的名称显示，显示不一致
   * Task :
   * Other:
     - 修改用户手册中的文档显示的应用名

 -- hebing <hebing@kylinos.cn>  Sat, 08 May 2021 13:49:42 +0800

youker-assistant (3.0.2-0kylin6k59~rc1) v101; urgency=medium

  [tang guang]
   * Bug  :
     - bug#51474 : 任务栏中应用预览窗口仍显示名称为麒麟助手(by wangdi)
     - BUG#52112 中等 【工具箱】宝德pt612k机器不显示自定义的调频范围
     - BUG#52111 中等 【工具箱】性能监测的调频模式有未汉化
     - BUG#50876 中等 【互认证】【量子芯云】麒麟助手，硬盘信息界面不显示NVMe盘的版本信息
   * Task :
   * Other:
     - 添加内存序列号为0时的判断
     - 添加显示Nvme盘的固件和厂商信息
     - 添加用户自定义在支持异常时的判断

 -- tangguang <tangguang@kylinos.cn>  Thu, 29 Apr 2021 19:41:13 +0800

youker-assistant (3.0.2-0kylin6k58~rc2) v101; urgency=medium

  [hebing]
   * Bug  :
   * Task :
   * Other:
      - 纠正麒麟助手内存信息获取的异常判断代码

 -- hebing <hebing@kylinos.cn>  Tue, 27 Apr 2021 15:50:11 +0800

youker-assistant (3.0.2-0kylin6k58~rc1) v101; urgency=medium

  [tang guang]
   * Bug  :
      - 英文模式下，文字未显示全(bug#44026)
      - 麒麟助手，电脑清理，清理后缓存显示不正确(bug#44183)
   * Task :
   * Other:
      - 解决麒麟助手部分机器内存信息存在内容分隔符
      - 解决部分光驱信息不显示

 -- tangguang <tangguang@kylinos.cn>  Mon, 26 Apr 2021 20:47:45 +0800

youker-assistant (3.0.2-0kylin6k57~rc1) v101; urgency=medium

  [tang guang]
   * Bug  :
   * Task :
   * Other: 
     - 根据设计稿再次重新调整cpu自定义调频界面
     - 修改帮助文档的应用名为工具箱       

 -- tangguang <tangguang@kylinos.cn>  Sun, 25 Apr 2021 14:50:22 +0800
