@@ -1,3 +1,14 @@
+youker-assistant (3.0.2-0kylin6k63~rc1) v101; urgency=medium
+
+  [tangguang]
+   * Bug  :
+      - Bug:54386 无法查看到主频
+      - Bug:54388 无法查看到声卡厂商
+   * Task :
+   * Other:
+
+ -- hebing <hebing@kylinos.cn>  Thu, 10 Jun 2021 19:27:22 +0800
+
 youker-assistant (3.0.2-0kylin6k62~rc1) v101; urgency=medium
 
   [yangmin]
